# IOTtoEverything

APIAndroidServerPhPFiles/: conectar.php  getDataLastUpdateAll.php  getDayData.php  getDeviceParameters.php  getNewId.php  indexJSON.php  newDevice.php  updateDb.php  updateDeviceParameters.php
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/pae/iot/processingcpp/: CameraActivity.java  Item.java  ItemAdapter.java  Principal.java  StartActivity.java
app/src/main/java/pae/iot/processingcpp/CustomStructures/: Atributs.java  CalendarE.java  Packet.java  Parameters.java  Protocol.java  Sound.java
app/src/main/java/pae/iot/processingcpp/DataFromInternet/: AsyncGetAtributesSingleDevice.java  AsyncGetDayData.java  AsyncGetDeviceParameters.java  AsyncGetLastInfoAllDevices.java  AsyncGetNewID.java  AsyncSetNewDevice.java  AsyncUpdateDeviceDB.java  AsyncUpdateDeviceParameters.java
app/src/main/java/pae/iot/processingcpp/DataFromPic/: DataLightDetector.java  RecieverHelper.java  SoundModulator.java
app/src/main/java/pae/iot/processingcpp/ItemActivities/: Config.java  DispositiuPage.java  Gps.java  Grafiques.java  Hores.java  HourAdapter.java  HourItem.java
app/src/main/res/drawable/: circle.xml  custom_progress.xml
app/src/main/res/layout/: activity_main.xml  activity_principal.xml  activity_start.xml  dialogadd.xml  fragment_config.xml  fragment_gps.xml  fragment_grafiques.xml  fragment_hores.xml  itemdispositiu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
(+3 files in other folders)
